--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,10 +1,10 @@
 # TODO: move to rhino api _config folder (currently)
 
 ---
-Name: ApiDataFetcher-config
+Name: DataFetcher-config
 Only:
   moduleexists: 'symbiote/silverstripe-queuedjobs'
 ---
 Symbiote\QueuedJobs\DataObjects\QueuedJobDescriptor:
   extensions:
-    - 'emteknetnz\ApiDataFetcher\Extensions\QueuedJobDescriptorExtension'
+    - 'emteknetnz\DataFetcher\Extensions\QueuedJobDescriptorExtension'
